Getting ready for posts + initial post

--- a/themes/PaperMod/layouts/partials/extend_footer.html
+++ b/themes/PaperMod/layouts/partials/extend_footer.html
@@ -3,8 +3,8 @@
     <!-- Add privacy and impressum link to the footer -->
     <span>
         •
-        <a href="https://mbblog.io/impressum/">Impressum</a>
+        <a href="https://mbblog.io/impressum">Impressum</a>
         •
-        <a href="https://mbblog.io//privacy">Privacy Policy</a>
+        <a href="https://mbblog.io/privacy">Privacy Policy</a>
     </span>
 {{- /* Footer custom content area end */ -}}
